# GeometryDash-C-SDL2

./: CMakeLists.txt  GeometryDashSDL  README.md  main.c
workingGame/: GeometryDashSDL
workingGame/Assets/: GDSMusicPlayer.unit  colors.ini
